--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,13 @@
 {
+  "printWidth": 80,
+  "bracketSpacing": true,
+  "bracketSameLine": true,
   "singleQuote": true,
-  "trailingComma": "all"
+  "arrowParens": "avoid",
+  "disableLanguages": [
+    "html"
+  ],
+  "trailingComma": "all",
+  "tabWidth": 2,
+  "semi": true
 }
